plugins {
	id 'java'
}

repositories {
	mavenCentral()
}

allprojects {

	group = 'co.edu.uco.carpooling'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '17'
	tasks.register("preparekotlinbuildscriptmodel"){}

}



tasks.named('test') {
	useJUnitPlatform()
}
